# StackWarp

./: LICENSE  README.md  test.sh
architectural_tests/: .gitignore  CMakeLists.txt  README.md  common.cpp  common.h  examine_result.cpp  harness.h  harness.s  msr_lists.h  noaslr.ld  ptedit_header.h  ttoolbox.h
architectural_tests/msr_flipper/: CMakeLists.txt  Kbuild  Makefile  msr_flipper.c  msr_flipper.h
architectural_tests/sequence_generation/: instructions.cpp  instructions.h
architectural_tests/tests/: all_instructions.cpp  control_flow.cpp  control_flow.s  data_flow.s  flip.c  intel_rdt.cpp  memory_type.cpp  self_test.cpp  sequences.cpp  single_instructions.cpp
getuid-exploit/: README.md  boot-vm.sh  exploit.gdb  setup-vm.sh  sudo.zst
kernel_rce/: .gitignore  README  configuration.nix  default_sev_config  exploit-gdb.gdb  flake.nix  inject.c  linux_config  run-vm.sh  run-vm_custom.sh
openssh-exploit/: README.md  exploit.gdb  run.sh  run_injector.sh  run_with_gdb.sh
openssh-exploit/exploit-injector/: Makefile  cacheutils.h  main.c  profiler.c  profiler.h
openssh-exploit/openssh-config/: ssh_host_ecdsa_key  ssh_host_ecdsa_key.pub  ssh_host_ed25519_key  ssh_host_ed25519_key.pub  ssh_host_rsa_key  ssh_host_rsa_key.pub  sshd_config
openssh-exploit/precompiled-binaries/: sshd  sshd_slowed
poc/: Makefile  README.md  unreach.c
rsa_crt/: README.md  exploit.py
simple-poc/: Makefile  README.md  attacker.c  victim.c
ucode_instr_num/: Makefile  README.md  pmc.c
